@@ -106,6 +106,7 @@ public:
         GrGLFunction<GrGLCreateShaderFn> fCreateShader;
         GrGLFunction<GrGLCullFaceFn> fCullFace;
         GrGLFunction<GrGLDeleteBuffersFn> fDeleteBuffers;
+        GrGLFunction<GrGLDeleteFencesFn> fDeleteFences;
         GrGLFunction<GrGLDeleteFramebuffersFn> fDeleteFramebuffers;
         GrGLFunction<GrGLDeleteProgramFn> fDeleteProgram;
         GrGLFunction<GrGLDeleteQueriesFn> fDeleteQueries;
@@ -130,6 +131,7 @@ public:
         GrGLFunction<GrGLEnableVertexAttribArrayFn> fEnableVertexAttribArray;
         GrGLFunction<GrGLEndQueryFn> fEndQuery;
         GrGLFunction<GrGLFinishFn> fFinish;
+        GrGLFunction<GrGLFinishFenceFn> fFinishFence;
         GrGLFunction<GrGLFlushFn> fFlush;
         GrGLFunction<GrGLFlushMappedBufferRangeFn> fFlushMappedBufferRange;
         GrGLFunction<GrGLFramebufferRenderbufferFn> fFramebufferRenderbuffer;
@@ -137,6 +139,7 @@ public:
         GrGLFunction<GrGLFramebufferTexture2DMultisampleFn> fFramebufferTexture2DMultisample;
         GrGLFunction<GrGLFrontFaceFn> fFrontFace;
         GrGLFunction<GrGLGenBuffersFn> fGenBuffers;
+        GrGLFunction<GrGLGenFencesFn> fGenFences;
         GrGLFunction<GrGLGenFramebuffersFn> fGenFramebuffers;
         GrGLFunction<GrGLGenerateMipmapFn> fGenerateMipmap;
         GrGLFunction<GrGLGenQueriesFn> fGenQueries;
@@ -224,6 +227,7 @@ public:
         GrGLFunction<GrGLSamplerParameteriFn> fSamplerParameteri;
         GrGLFunction<GrGLSamplerParameterivFn> fSamplerParameteriv;
         GrGLFunction<GrGLScissorFn> fScissor;
+        GrGLFunction<GrGLSetFenceFn> fSetFence;
         GrGLFunction<GrGLShaderSourceFn> fShaderSource;
         GrGLFunction<GrGLStencilFuncFn> fStencilFunc;
         GrGLFunction<GrGLStencilFuncSeparateFn> fStencilFuncSeparate;
@@ -231,6 +235,7 @@ public:
         GrGLFunction<GrGLStencilMaskSeparateFn> fStencilMaskSeparate;
         GrGLFunction<GrGLStencilOpFn> fStencilOp;
         GrGLFunction<GrGLStencilOpSeparateFn> fStencilOpSeparate;
+        GrGLFunction<GrGLTestFenceFn> fTestFence;
         GrGLFunction<GrGLTexBufferFn> fTexBuffer;
         GrGLFunction<GrGLTexBufferRangeFn> fTexBufferRange;
         GrGLFunction<GrGLTexImage2DFn> fTexImage2D;
