@@ -496,6 +496,14 @@ sk_sp<const GrGLInterface> GrGLMakeAssembledGLESInterface(void *ctx, GrGLGetProc
 
     GET_PROC(GetShaderPrecisionFormat);
 
+    if (extensions.has("GL_NV_fence")) {
+        GET_PROC_SUFFIX(DeleteFences, NV);
+        GET_PROC_SUFFIX(FinishFence, NV);
+        GET_PROC_SUFFIX(GenFences, NV);
+        GET_PROC_SUFFIX(SetFence, NV);
+        GET_PROC_SUFFIX(TestFence, NV);
+    }
+
 
     // End autogenerated content
     // TODO(kjlubick): Do we want a feature that removes the extension if it doesn't have
