@@ -501,6 +501,14 @@ sk_sp<const GrGLInterface> GrGLMakeAssembledGLInterface(void *ctx, GrGLGetProc g
         GET_PROC(GetShaderPrecisionFormat);
     }
 
+    if (extensions.has("GL_NV_fence")) {
+        GET_PROC_SUFFIX(DeleteFences, NV);
+        GET_PROC_SUFFIX(FinishFence, NV);
+        GET_PROC_SUFFIX(GenFences, NV);
+        GET_PROC_SUFFIX(SetFence, NV);
+        GET_PROC_SUFFIX(TestFence, NV);
+    }
+
 
     // End autogenerated content
     interface->fStandard = kGL_GrGLStandard;
