@@ -743,6 +743,13 @@ bool GrGLInterface::validate() const {
         }
     }
 
+    if ((GR_IS_GR_GL(fStandard) && (
+          fExtensions.has("GL_NV_fence"))) ||
+       (GR_IS_GR_GL_ES(fStandard) && (
+          fExtensions.has("GL_NV_fence")))) {
+        // all functions were marked optional or test_only
+    }
+
 
     // End autogenerated content
     return true;
