@@ -723,4 +723,16 @@
     ],
   },
 
+  {
+    "GL":    [{"ext": "GL_NV_fence"}],
+    "GLES":  [{"ext": "GL_NV_fence"}],
+    "WebGL": null,
+
+    "functions": [
+      "DeleteFences", "FinishFence", "GenFences", "SetFence", "TestFence",
+    ],
+    "optional": [
+      "DeleteFences", "FinishFence", "GenFences", "SetFence", "TestFence"
+    ]
+  }
 ]
