@@ -7,6 +7,7 @@ This file includes a list of high level updates for each milestone release.
 Milestone 81
 
 <Insert new notes here- top is most recent.>
+  * Added support for GL_NV_fence extension.
 
   * Added support for BC1 RGBA compressed textures
 
